@@ -118,6 +118,7 @@
     - Added oneliner() to create portable perl one-liners.
     - Craig Berry found some typos in ExtUtils::Liblist::Kid's VMS part
     * ExtUtils::Install did not work on MacPerl due to a hardcoded '.'
+    * prompt() will now read from STDIN.
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
